# openapi/openapi.yaml
@@ -135,6 +135,28 @@ paths:
           description: OK
       tags:
       - auth-controller
+  /api/v1/auth/introspect:
+    post:
+      operationId: introspect
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+              required:
+              - token
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/IntrospectionResult"
+          description: OK
+      tags:
+      - auth-controller
   /api/v1/auth/login:
     post:
       operationId: login
@@ -581,6 +603,20 @@ components:
       type: object
       properties:
         authority:
+          type: string
+    IntrospectionResult:
+      type: object
+      properties:
+        active:
+          type: boolean
+        exp:
+          type: integer
+          format: int64
+        roles:
+          type: array
+          items:
+            type: string
+        sub:
           type: string
     Link:
       type: object
